--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
-    "node": "8.9.1"
+    "node": "11.0.0"
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "dev:server": "cd client && yarn build && cd .. && yarn start",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "nodemon": "^1.18.4",
+    "yarn": "^1.10.1"
   },
   "devDependencies": {
+    "concurrently": "^4.0.1",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
